client/src/components/GameCard/GameCard.module.css
.card {
  position: relative;
  overflow: hidden;
  cursor: pointer;
  background-color: rgba(0, 0, 0, 0);
  display: flex;
  justify-content: end;
}

.thumbnail {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -2;
  width: 100%;
}

/* .thumbnailWrapper {
  position: absolute;
  top: 0;
  left: 0;
}

.thumbnailWrapper::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0) 60%,
    rgba(250, 250, 250, 1) 95%
  );
} */

h2.title,
div.paragraph {
  color: #ffffff;
  margin: 0;
}

h2.title {
  white-space: nowrap;
}

.content {
  padding: 1rem;
  width: 100%;
}

.content::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.65);
  z-index: -1;
}

@media screen and (min-width: 768px) {
  .thumbnail {
    width: auto;
  }

  .content {
    position: relative;
    background-color: #fafafa;
    width: calc(100% - 365px);
  }

  .content::before {
    width: 365px;
    left: -365px;
    display: block;
    background: linear-gradient(
      90deg,
      rgba(0, 0, 0, 0) 60%,
      rgba(250, 250, 250, 1) 100%
    );
  }

  h2.title,
  div.paragraph {
    color: rgba(0, 0, 0, 0.88);
  }
}

